# platform-demo

./: pyproject.toml
app/: main.py
